--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,9 @@ a {
 
 
 
-
+.slide-menu{
+  display: none;
+}
 
 
 
@@ -600,8 +602,8 @@ color: black;
 .nav-b-CONTD a{
   color: rgb(255, 255, 255);
   font-size: 1.4vw;
-  padding: 1vw;padding-top: 0.8vw;
-  padding-bottom: 0.5vw;
+  padding: 1vw;padding-top:1vw;
+  padding-bottom: 0.6vw;
   height: 3vw;
   border-radius: 50%;
   /* background-color: rgb(255, 255, 255); */
@@ -1347,6 +1349,17 @@ width: 20vw;
 
   
 }
+.underline {
+  background-color: rgba(0, 128, 0, 0);
+  border-bottom: 0svw solid green;
+}
+.left-icon{
+  color: rgb(0, 0, 0);
+  font-size: 8vw;
+  width: 100%;
+  text-align: right;
+  
+}
 .locations-me select, .service-me select{
   width: 100%;
   padding: 2vw;
@@ -1354,6 +1367,42 @@ width: 20vw;
 .popInner form {
     margin: 0vw;
     margin-top: 0;
+}
+.this-icon{
+  margin: 4vw;
+}
+.slide-menu *{
+  padding: 0;
+}
+.slide-menu ul{
+  margin-top: 5vw;
+
+}
+.slide-menu ul li{
+  margin-top: 8vw;
+  text-align: center;
+}
+.slide-menu ul li a{
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 6vw;
+
+}
+.slide-menu{
+  position: absolute;
+  z-index: 99;
+  transition: 0.3s;
+  width: 100%;
+  transform: translateX(-100%);
+  background-color: rgba(255, 255, 255, 0.771);
+  height: 100%;
+
+}.onmenu{
+  transform: translateX(0%);
+  transition: 0.3s;
+}
+.slide-menu{
+  display: block;
 }
 .form-sub {
   width: 100%;
